--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,10 +17,12 @@
     "antd": "^5.27.3",
     "dayjs": "^1.11.18",
     "fontkit": "^2.0.4",
+    "form-data": "^4.0.4",
     "formidable": "^3.5.4",
     "konva": "^10.0.2",
     "lodash": "^4.17.21",
     "next": "15.5.3",
+    "node-fetch": "^3.3.2",
     "notyf": "^3.10.0",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.4.149",
@@ -31,6 +33,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/form-data": "^2.2.1",
     "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@types/pdfjs-dist": "^2.10.378",
